[package]
name = "unreal_enviroment_changer"
version = "0.2.0"
edition = "2021"
author = "Sebastian Silva"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.11"
